# x-leverage

./: .gitignore  Anchor.toml  BUILD_ENVIRONMENT.md  CODEX_TASK_LIQUIDATION_FIXES_UPDATED.md  Cargo.toml  LICENSE  QUICK_BUILD_GUIDE.md  README.md  TOOLCHAIN_FIX_SUMMARY.md  VAULT_TOKEN_CUSTODY_DEPLOYED.md  XLeverage_Whitepaper_Rewritten_enhanced.docx  build.sh  package-lock.json  package.json  test-all-transactions.js  tsconfig.json  validate-fixes.js
.claude/: CRITICAL_GITHUB_ACCESS.md  HOW_THIS_ENSURES_CORRECT_BUILDS.md  INSTRUCTIONS_FOR_CLAUDE.txt  README.md  SESSION_STARTUP_CHECKLIST.md  TOKEN_SECURITY_SUMMARY.md  build-config.md  github-auth-config.md
.claude/agents/: project-strategist.md  security-penetration-tester.md  unit-test-writer.md
client/: sdk.ts  utils.ts
client/types/: index.ts
client/ui/: index.html
programs/financing_engine/: Cargo.toml
programs/financing_engine/src/: lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/liquidation_engine/: Cargo.toml
programs/liquidation_engine/src/: lib.rs
programs/lp_vault/: Cargo.toml
programs/lp_vault/src/: lib.rs
programs/oracle_framework/: Cargo.toml
programs/oracle_framework/src/: lib.rs
programs/settlement_engine/: Cargo.toml
programs/settlement_engine/src/: lib.rs
programs/treasury_engine/: Cargo.toml
programs/treasury_engine/src/: lib.rs
programs/wrapping_vault/: Cargo.toml
programs/wrapping_vault/src/: lib.rs
scripts/: init-protocol-config.ts  init-protocol-simple.ts  localnet-start.sh  populate-ui-data.ts  test-close-position.ts  test-lp-vault.ts  test-position-open.ts
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: coverage_report.md  financing_engine_tests.rs  governance_tests.rs  integration.rs  integration_tests.rs  liquidation_engine_tests.rs  lp_vault_tests.rs  oracle_framework_tests.rs  treasury_engine_tests.rs
tests/tests/common/: mod.rs  report.rs  setup.rs
xleverage/: Anchor.toml  README.md
xleverage/client/: sdk.ts  utils.ts
xleverage/client/ui/: app.js  styles.css
xleverage/programs/financing_engine/: Cargo.toml
xleverage/programs/financing_engine/src/: lib.rs
xleverage/programs/governance/: Cargo.toml
xleverage/programs/liquidation_engine/: Cargo.toml
xleverage/programs/liquidation_engine/src/: lib.rs
xleverage/programs/lp_vault/: Cargo.toml
xleverage/programs/lp_vault/src/: lib.rs
xleverage/programs/oracle_framework/: Cargo.toml
xleverage/programs/settlement_engine/: Cargo.toml
xleverage/programs/settlement_engine/src/: lib.rs
xleverage/programs/treasury_engine/src/: lib.rs
xleverage/scripts/: airdrop.ts  deploy.ts  localnet-start.sh
xleverage/tests/src/: lib.rs
