[workspace]
resolver = "2"
members = [
    "programs/financing_engine",
    "programs/liquidation_engine",
    "programs/lp_vault",
    "programs/treasury_engine",
    "programs/oracle_framework",
    "programs/governance",
    "programs/settlement_engine",
    "tests"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
anchor-lang = "=0.32.0"
anchor-spl = { version = "=0.32.0", features = ["token", "associated_token"] }
anyhow = "1.0"
bytemuck = "1.14"
fixed = "1.24"
solana-program = "=1.18.12"
solana-program-test = "=1.18.12"
solana-sdk = "=1.18.12"
solana-instruction = "=2.2.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
overflow-checks = true

[patch.crates-io]
solana_rbpf = { path = "vendor/solana_rbpf" }

