[workspace]
resolver = "2"
members = [
    "programs/financing_engine",
    "programs/liquidation_engine",
    "programs/lp_vault",
    "programs/treasury_engine",
    "programs/oracle_framework",
    "programs/governance",
    "programs/settlement_engine",
    "programs/wrapping_vault",
    "tests"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
anchor-lang = { version = "=0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.0", default-features = false, features = ["token", "associated_token"] }
anyhow = "1.0"
bytemuck = "1.14"
fixed = "1.24"
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
solana-sdk = "=2.2.1"
solana-instruction = "=2.2.1"
solana-program-option = "=2.2.1"
solana-program-pack = "=2.2.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
overflow-checks = true

[patch.crates-io]
solana_rbpf = { path = "vendor/solana_rbpf" }
solana-account-info = { path = "vendor/solana-account-info" }
solana-instructions-sysvar = { path = "vendor/solana-instructions-sysvar" }
