[package]
name = "xleverage-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
financing_engine = { path = "../programs/financing_engine" }
lp_vault = { path = "../programs/lp_vault" }
oracle_framework = { path = "../programs/oracle_framework" }
governance = { path = "../programs/governance" }
liquidation_engine = { path = "../programs/liquidation_engine" }
treasury_engine = { path = "../programs/treasury_engine" }

[lib]
path = "src/lib.rs"

[[test]]
name = "financing_engine_tests"
harness = true

[[test]]
name = "lp_vault_tests"
harness = true

[[test]]
name = "oracle_framework_tests"
harness = true

[[test]]
name = "governance_tests"
harness = true

[[test]]
name = "liquidation_engine_tests"
harness = true

[[test]]
name = "treasury_engine_tests"
harness = true

[[test]]
name = "integration_tests"
harness = true
