[package]
name = "financing_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lp_vault = { path = "../lp_vault", features = ["cpi"] }
oracle_framework = { path = "../oracle_framework", features = ["cpi"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

